# reelsmaker

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  fly.toml  main.py  pyproject.toml  reelsmaker.py
.github/: dependabot.yml
.github/workflows/: deploy_backend.yml
app/: config.py  image_gen.py  pexel.py  prompt_chain.py  prompt_gen.py  reels_maker.py  subtitle_gen.py  synth_gen.py  tiktokvoice.py  video_gen.py
app/utils/: __init__.py  path_util.py
tests/: test_prompt_gen.py  test_reels_maker.py
