[tool.poetry]
name = "autoreelsmaker"

version = "0.1.0"
description = ""
authors = ["Navicstein <navicsteinrotciv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
moviepy = "^1.0.3"
aiohttp = "^3.9.5"
pydantic = "^2.8.2"
elevenlabs = "^1.3.1"
streamlit = "^1.36.0"
srt-equalizer = "^0.1.9"
termcolor = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
